# Real-time-Person-Detection-with-Audio-Alerts-

./: .gitignore  CMakeLists.txt  PerfLogger.hpp  README.md  SystemC_Logger.cpp  audio_player.cpp  audio_player.hpp  main.cpp  udp_sender.cpp  udp_sender.hpp  ui.py  ws_bridge.py  yolo-fastestv2.cpp  yolo-fastestv2.h
Simulation/: Comparison_results.ipynb  README_SYSTEMC.md  latency_sc.csv  main.cpp  perf_log.csv  run_sc
